--- a/src/app/updateform/updateform.component.html
+++ b/src/app/updateform/updateform.component.html
@@ -183,7 +183,12 @@
                         style="margin-top: 20px;">
                         <mat-divider></mat-divider>
                         <div class="row" style="display: block;">
-                            <h4 style="text-align: center;">{{table.TableText}}</h4>
+                            <h3 style="text-align: center;">{{table.TableText}}</h3>
+                        </div>
+                        
+                        <mat-divider></mat-divider>
+                        <div class="row" style="display: block;">
+                           <h4 style="text-align: center;font-size: 22px;">{{table.SubTitle}}</h4>
                         </div>
                         <div formArrayName="ColumnRows" class="row" id="table-overflow">
                             <div class="col">
